--- a/SalesWebMcv/Views/Sellers/Index.cshtml
+++ b/SalesWebMcv/Views/Sellers/Index.cshtml
@@ -6,11 +6,15 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="table-dark">
             <th>
-                @Html.DisplayNameFor(model => model.Nome)
+                Name
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -20,6 +24,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Department)
             </th>
             <th>
 
@@ -41,6 +48,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.BaseSalary)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Department.Name)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
