--- a/SalesWebMcv/Views/Sellers/Details.cshtml
+++ b/SalesWebMcv/Views/Sellers/Details.cshtml
@@ -1,12 +1,8 @@
 ﻿@model SalesWebMvc.Models.Seller;
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
-
-<h2>@ViewData["Title"]</h2>
-
-<h3>Are your sure you want to delete this?</h3>
 
 <div>
     <h4>Seller</h4>
@@ -36,11 +32,16 @@
         <dd>
             @Html.DisplayFor(Model => Model.BaseSalary)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(Model => Model.Department)
+        </dt>
+        <dd>
+            @Html.DisplayFor(Model => Model.Department.Name)
+        </dd>
     </dl>
+</div>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-action="Index" class="btn btn-info">Back to List</a>
-    </form>
+<div>
+    <a asp-action="Edit" asp-route-itemid="@Model.Id" class="btn btn-primary">Edit</a>
+    <a asp-action="Index" class="btn btn-info">Back to List</a>
 </div>
