--- a/SalesWebMcv/Views/Shared/_Layout.cshtml
+++ b/SalesWebMcv/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SalesRecords" asp-action="Index">Sales</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
@@ -42,7 +45,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="bottom: 0; position: fixed; width: 100%; text-align: center;">
         <div class="container">
             &copy; 2025 - SalesWebMcv - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
